--- a/src/app/modals/user-add-edit/user-add-edit.component.html
+++ b/src/app/modals/user-add-edit/user-add-edit.component.html
@@ -38,7 +38,7 @@
     </mat-form-field>
     <mat-form-field class="auth-form input-width-100">
       <mat-label>Password</mat-label>
-      <input type="text" matInput formControlName="password" />
+      <input type="text" matInput formControlName="password" inputSpaceTrim />
       @if (this.addUserForm.get('password')?.invalid &&
       this.addUserForm.get('password')?.touched) {
       <mat-error>Password is required</mat-error>
